--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ name: Integrated Solutions
 markdown: kramdown
 kramdown:
   input: GFM
-collections_dir: _collections
+# collections_dir: _collections
 collections:
   - about
   - services
@@ -10,3 +10,5 @@ collections:
   - questions
   - missionvisionvalues
   - team_members
+  - portfolio
+  - pricing
