--- a/_config.yml
+++ b/_config.yml
@@ -2,13 +2,4 @@ name: Integrated Solutions
 markdown: kramdown
 kramdown:
   input: GFM
-# collections_dir: _collections
-collections:
-  - about
-  - services
-  - stats
-  - questions
-  - missionvisionvalues
-  - team_members
-  - portfolio
-  - pricing
+bootstrapmade: # knight
